--- a/fusion_oop_con_login/libs/css/custom.css
+++ b/fusion_oop_con_login/libs/css/custom.css
@@ -1,18 +1,18 @@
-.left-margin{
-    margin:0 .5em 0 0;
+.left-margin {
+  margin: 0 0.5em 0 0;
 }
- 
-.right-button-margin{
-    margin: 0 0 1em 0;
-    overflow: hidden;
+
+.right-button-margin {
+  margin: 0 0 1em 0;
+  overflow: hidden;
 }
- 
+
 /* some changes in bootstrap modal */
 .modal-body {
-    padding: 20px 20px 0px 20px !important;
-    text-align: center !important;
+  padding: 20px 20px 0px 20px !important;
+  text-align: center !important;
 }
- 
-.modal-footer{
-    text-align: center !important;
+
+.modal-footer {
+  text-align: center !important;
 }
